Fixed box shadow value to work on safari by moving values to cardSlide hover

--- a/gk-portfolio/src/components/DevProjectCard/style.css
+++ b/gk-portfolio/src/components/DevProjectCard/style.css
@@ -3,19 +3,9 @@
     width: 100%;
     height: 100%;
     border-radius: 18px;
-    -webkit-box-shadow: 0px 4px 23px 0px rgba(0,0,0,0.65);
-       -moz-box-shadow: 0px 4px 23px 0px rgba(0,0,0,0.65);
-            box-shadow: 0px 4px 23px 0px rgba(0,0,0,0.65);
     transition: ease .5s;
+    z-index: 3000;
 }
-
-.project-img:hover {
-    -webkit-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.75);
-         box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.75);
-    transition: ease .5s;
-}
-
 
 /* Meta container */
 .meta-container {
@@ -71,6 +61,16 @@
     border-radius: 23px;
     border: none;
     display: inline-block;
+    -webkit-box-shadow: 0px 4px 23px 0px rgba(0,0,0,0.65);
+       -moz-box-shadow: 0px 4px 23px 0px rgba(0,0,0,0.65);
+            box-shadow: 0px 4px 23px 0px rgba(0,0,0,0.65);
+}
+
+.cardSlide:hover {
+    -webkit-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.75);
+         box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.75);
+    transition: ease .5s;
 }
 
 .cardSlide:focus {
